--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -33,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "react-router-dom": "^7.1.1",
     "tailwindcss": "^3.4.17"
   }
